--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<p class="style2">
 							Learn a little about me and the projects I've completed recently.
 						</p>
-						<p class="style3">I graduated from Purdue University with a degree in computer engineering and a minor in organizational leadership. I'm constantly seeking the next challenge and route of growth.</p>
+						<p class="style3">I graduated from Purdue University in December 2022 with a degree in computer engineering and a minor in organizational leadership. I'm constantly seeking the next challenge and route of growth.</p>
 						<ul class="actions">
 							<li><a href="about-me.html" class="button style3 large">More About Me</a></li>
 						</ul>
@@ -65,7 +65,8 @@
 								<section class="project">
 									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 									<h3><a href="#">Metaporter</a></h3>
-									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+									<p>
+										This is a handheld 3D scanning tool that quickly creates dense 3D meshes of still objects. It uses multi-sensor data and neural networks to generate accurate models. The tool has limitations and the quality of the 3D models depends on the data collected. Users interact with the device through a keypad matrix and view the reconstruction on a host machine.									</p>
 									<ul class="actions">
 										<li><a href="#" class="button style1">Learn More</a></li>
 									</ul>
@@ -75,7 +76,8 @@
 								<section class="project">
 									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 									<h3><a href="#">Mock Reddit Website</a></h3>
-									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+									<p>
+										This is a mock social media website that enables users to create accounts, post, upvote/downvote, and view a feed of posts from communities they have subscribed to. It provides a platform for users to share and discover new perspectives on various topics.									</p>
 									<ul class="actions">
 										<li><a href="#" class="button style1">Learn More</a></li>
 									</ul>
@@ -85,7 +87,8 @@
 								<section class="project">
 									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 									<h3><a href="#">Rogue</a></h3>
-									<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+									<p>
+										This is a terminal-based adventure game where players act as a knight trying to reach the end of a maze. They must collect objects and fight monsters to succeed. The levels are different each time, depending on the selected map. The game provides a challenging and thrilling experience.									</p>
 									<ul class="actions">
 										<li><a href="#" class="button style1">Learn More</a></li>
 									</ul>
