More project descriptions and images

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 								<li>
 									<a href="index.html#projects">Projects</a>
 									<ul>
-										<li><a href="#">Metaporter</a></li>
-										<li><a href="#">Mock Reddit Website</a></li>
-										<li><a href="#">Rogue</a></li>
+										<li><a href="metaporter.html">Metaporter</a></li>
+										<li><a href="mock-reddit.html">Mock Reddit Website</a></li>
+										<li><a href="rogue.html">Rogue</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -63,34 +63,34 @@
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-									<h3><a href="#">Metaporter</a></h3>
+									<a href="metaporter.html" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<h3><a href="metaporter.html">Metaporter</a></h3>
 									<p>
-										This is a handheld 3D scanning tool that quickly creates dense 3D meshes of still objects. It uses multi-sensor data and neural networks to generate accurate models. The tool has limitations and the quality of the 3D models depends on the data collected. Users interact with the device through a keypad matrix and view the reconstruction on a host machine.									</p>
+										This is a handheld 3D scanning tool that uses multi-sensor data and neural networks to generate accurate models of still objects. The quality of the 3D models depends on the quality of the data collected. Users interact with the device through a keypad matrix and view the reconstruction on a host machine.									</p>
 									<ul class="actions">
-										<li><a href="#" class="button style1">Learn More</a></li>
+										<li><a href="metaporter.html" class="button style1">Learn More</a></li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-									<h3><a href="#">Mock Reddit Website</a></h3>
+									<a href="mock-reddit.html" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<h3><a href="mock-reddit.html">Mock Reddit Website</a></h3>
 									<p>
-										This is a mock social media website that enables users to create accounts, post, upvote/downvote, and view a feed of posts from communities they have subscribed to. It provides a platform for users to share and discover new perspectives on various topics.									</p>
+										This is a mock social media website that enables users to create accounts, post, upvote/downvote, and view a feed of posts from all users. It provides a platform for people to share and discover new perspectives on various topics with basic discussion board functionalities.</p>
 									<ul class="actions">
-										<li><a href="#" class="button style1">Learn More</a></li>
+										<li><a href="mock-reddit.html" class="button style1">Learn More</a></li>
 									</ul>
 								</section>
 							</div>
 							<div class="col-4 col-12-medium">
 								<section class="project">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-									<h3><a href="#">Rogue</a></h3>
+									<a href="rogue.html" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+									<h3><a href="rogue.html">Rogue</a></h3>
 									<p>
 										This is a terminal-based adventure game where players act as a knight trying to reach the end of a maze. They must collect objects and fight monsters to succeed. The levels are different each time, depending on the selected map. The game provides a challenging and thrilling experience.									</p>
 									<ul class="actions">
-										<li><a href="#" class="button style1">Learn More</a></li>
+										<li><a href="rogue.html" class="button style1">Learn More</a></li>
 									</ul>
 								</section>
 							</div>
