--- a/about-me.html
+++ b/about-me.html
@@ -31,9 +31,9 @@
 							<li>
 								<a href="index.html#projects">Projects</a>
 								<ul>
-									<li><a href="#">Metaporter</a></li>
-									<li><a href="#">Mock Reddit Website</a></li>
-									<li><a href="#">Rogue</a></li>
+									<li><a href="metaporter.html">Metaporter</a></li>
+									<li><a href="mock-reddit.html">Mock Reddit Website</a></li>
+									<li><a href="rogue.html">Rogue</a></li>
 								</ul>
 							</li>
 						</ul>
