--- a/rogue.html
+++ b/rogue.html
@@ -49,11 +49,38 @@
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
-									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
-									</a>
-									<p>Metaporter is a handheld, plugged-in tool that enables fast and accurate 3D scanning and reconstruction of still objects. With its combination of a camera and an IMU (Inertial Measurement Unit), Metaporter fuses multi-modal sensor data to estimate volumetric radiance-and-density fields using cutting-edge neural networks. This results in the creation of detailed 3D meshes in mere minutes. However, the quality of the final model is dependent on the data collected and may be limited for reconstructing certain types of surfaces and under certain lighting conditions. The device is user-friendly, with a keypad matrix for mode selection and a display showing important information like system state and recording time. The final 3D reconstruction can be viewed on a host machine.</p>
-									<p>3D reconstruction tools have many applications in various fields such as video games, medicine, archaeology, AR/VR, and more. One example application of Metaporter would be in a video game as many video games exist where players can create their own characters to play with. However, it is often impossible to create a realistic or similar looking character to the player, making the game feel less immersive. Me and my team hoped that Metaporter can provide a solution for scenarios such as these.</p>
+									<p>In this adventure game that runs on a command-line interface, you take on the role of a knight who embarks on a quest to navigate through a maze and reach the end. Along the way, you'll need to collect various objects and engage in battles with formidable monsters in order to progress. With each new game, the layout of the maze can be different based on your selected map, providing a unique and exciting challenge.</p>
+									<p>The maps are created by parsing xml files and creating each element as an object with the appropriate properties set. By utilizing object-oriented programming, this game can adopt complex elements and characters with unique actions. My version of Rogue is written in Java and uses multithreading for running multiples processes in the game.</p>
+									Game Controls:
+									<ul>
+										<li>'H': Left</li>
+										<li>'L': Right</li>
+										<li>'K': Up</li>
+										<li>'J': Down</li>
+										<li>'P': Pick up item</li>
+										<li>'D' [integer]: Drop item [integer] from the pack</li>
+										<li>'I': Inventory</li>
+										<li>'C': Change out of armor (placed back in pack)</li>
+										<li>'E' [Y|y]: End the game</li>
+										<li>'?': Help menu showing different commands</li>
+										<li>'H' [command]: Tells you more about the command</li>
+										<li>'R' [integer]: Read item [integer] from pack (used for scrolls)</li>
+										<li>'T' [integer]: Take out weapon [integer]</li>
+										<li>'W' [integer]: Wear armor [integer]</li>
+									</ul>
+									Character Meanings:
+									<ul>
+										<li>'@' = Player</li>
+										<li>'X' = Wall</li>
+										<li>'.' = Floor</li>
+										<li>'+' = Door</li>
+										<li>'T' = Troll</li>
+										<li>'S' = Snake</li>
+										<li>'H' = Hobgoblin</li>
+										<li>']' = Armor</li>
+										<li>')' = Sword</li>
+										<li>'?' = Scroll</li>
+									</ul>
 								</article>
 							</div>
 
@@ -122,14 +149,6 @@
 											<h3 class="icon solid fa-envelope">Email</h3>
 											<p>
 												<a href="mailto:kunovski.kris@gmail.com">kunovski.kris@gmail.com</a>
-											</p>
-										</section>
-									</div>
-									<div class="col-6 col-12-small">
-										<section>
-											<h3 class="icon solid fa-phone">Phone</h3>
-											<p>
-												(219) 776-4889
 											</p>
 										</section>
 									</div>
