Add about me and minor fixes

--- a/metaporter.html
+++ b/metaporter.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/favicon" href="/images/favicon.ico">
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -55,9 +56,10 @@
 									<p>Metaporter is a handheld, plugged-in tool that enables fast and accurate 3D scanning and reconstruction of still objects. With its combination of a camera and an IMU (Inertial Measurement Unit), Metaporter fuses multi-modal sensor data to estimate volumetric radiance-and-density fields using cutting-edge neural networks. This results in the creation of detailed 3D meshes in mere minutes. However, the quality of the final model is dependent on the data collected and may be limited for reconstructing certain types of surfaces and under certain lighting conditions. The device is user-friendly, with a keypad matrix for mode selection and a display showing important information like system state and recording time. The final 3D reconstruction can be viewed on a host machine.</p>
 									<p>3D reconstruction tools have many applications in various fields such as video games, medicine, archaeology, AR/VR, and more. One example application of Metaporter would be in a video game as many video games exist where players can create their own characters to play with. However, it is often impossible to create a realistic or similar looking character to the player, making the game feel less immersive. Me and my team hoped that Metaporter can provide a solution for scenarios such as these.</p>
 								</article>
-								<img src="images/device-back.jpg" alt="" style="max-height:35rem;"/>
-
-								<img src="images/device-front.jpg" alt="" style="max-height:35rem;"/>
+								<div style="display:flex; justify-content: center;">
+									<img src="images/device-back.jpg" alt="" style="max-height:35rem;"/>
+									<img src="images/device-front.jpg" alt="" style="max-height:35rem;"/>
+								</div>
 							</div>
 
 					</div>
@@ -85,7 +87,7 @@
 									<a href="#" class="image featured"><img src="images/report.jpg" alt="" /></a>
 									<h3><a href="#">Documents</a></h3>
 									<p>
-										Examine the various technical overviews and professional reports completed for the distinct parts of this project.
+										Examine the various technical overviews and professional reports completed for the different parts of this project.
 									</p>
 									<ul class="actions">
 										<li><a href="#" class="button style1">Learn More</a></li>
