--- a/mock-reddit.html
+++ b/mock-reddit.html
@@ -51,7 +51,7 @@
 							<div id="content">
 								<article class="box post">
 
-									<p>This is my version of a mock Reddit website, where you can create an account, post content, view your feed and vote on posts.</p>
+									<p>This is my version of a mock Reddit website where you can create an account, post content, view your feed, and vote on posts.</p>
 
 									<p>To get started, you'll need to create an account by providing a username and password. Once you've created an account, you can start posting content to the site. Your posts can be any text-based discussion or links to other websites.</p>
 
