--- a/documents.html
+++ b/documents.html
@@ -11,6 +11,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/favicon" href="/images/favicon.ico">
+		<style>
+			#content a {
+				text-decoration: none;
+			}
+
+			#content a:hover {
+				text-decoration: underline;
+			}
+		</style>
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
