--- a/references.html
+++ b/references.html
@@ -11,6 +11,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/favicon" href="/images/favicon.ico">
+		<style>
+			#content a {
+				text-decoration: none;
+			}
+
+			#content a:hover {
+				text-decoration: underline;
+			}
+		</style>
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -64,14 +73,14 @@
 								<a href="documents/4x4-Matrix-Membrane-Keypad-v1.2.pdf">
 									4x4 Matrix Keypad Datasheet
 								</a><br/>
+								<a href="http://www.lcdwiki.com/2.2inch_SPI_Module_ILI9341_SKU:MSP2202">
+									MSP2022 2.2in SPI Module Display Documentation
+								</a><br/>
 								<a href="https://www.raspberrypi.com/documentation/accessories/camera.html">
 									Raspberry Pi Camera Module Documentation
 								</a><br/>
 								<a href="https://developer.download.nvidia.com/assets/embedded/secure/jetson/Nano/docs/NV_Jetson_Nano_Developer_Kit_User_Guide.pdf?HRm96SNs9dlvkZpgHnLIQuTLEje-baZkpLZcBqxHzS00qBS5HHfY8gCv1C4rkmmiPsHiHvL-szm2PIERp4fMADhXv789sAlb5JR_4QdkAn5aj9mQXAsGlpHPBEbHKXTR4YdqGujoOMbE-E62Jd4MSGcZbzAvWg3DmL-quLJVf4n8GZMECcJuew89a3PgTZma6eo=&t=eyJscyI6ImdzZW8iLCJsc2QiOiJodHRwczovL3d3dy5nb29nbGUuY29tLyJ9">
 									Jetson Nano Developer Kit User Guide
-								</a><br/>
-								<a href="http://www.lcdwiki.com/2.2inch_SPI_Module_ILI9341_SKU:MSP2202">
-									MSP2022 2.2in SPI Module Display Documentation
 								</a>
 							</div>
 
