Minor changes + metaporter demo video

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Kristopher Kunovski</a></h1>
+							<h1>Kristopher Kunovski</h1>
 							<p>Portfolio</p>
 						</div>
 
