--- a/metaporter.html
+++ b/metaporter.html
@@ -64,6 +64,7 @@
 										src="https://www.youtube.com/embed/rmtuLg3UkFk"
 								style="margin-top:40px; margin-left: auto;margin-right: auto; display: block;">
 								</iframe>
+								<p style="text-align:center; margin-top:2rem;margin-bottom:0rem;">Other Contributors: <a href="mailto:shah435@purdue.edu">Jehan Shah</a>, <a href="mailto:wang3989@purdue.edu">Sen Wang</a>, <a href="mailto:mbhasin@purdue.edu">Manav Bhasin</a></p>
 							</div>
 
 					</div>
